// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrandLogo dashboard defined 1`] = `
<a
  className="mx-auto"
  href="url"
>
  <img
    alt="edX, Inc. Dashboard"
    className="logo py-3"
    src="https://edx-cdn.org/v3/default/logo.svg"
  />
</a>
`;

exports[`BrandLogo dashboard undefined 1`] = `
<a
  className="mx-auto"
  href="/"
>
  <img
    alt="edX, Inc. Dashboard"
    className="logo py-3"
    src="https://edx-cdn.org/v3/default/logo.svg"
  />
</a>
`;
